MyOrg2022/force-app/main/default/objects/Exception__e/Exception__e.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <pluralLabel>Exception</pluralLabel>
</CustomObject>