MyOrg2022/force-app/main/default/objects/Exception__e/fields/ExceptionLogDateTime__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLogDateTime__c</fullName>
    <label>ExceptionLogDateTime</label>
    <type>DateTime</type>
</CustomField>