MyOrg2022/force-app/main/default/objects/Exception__e/fields/ExceptionRecordID__c.field-meta.xml
<CustomField>
    <fullName>ExceptionRecordID__c</fullName>
    <label>ExceptionRecordID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>