MyOrg2022/force-app/main/default/objects/Exception__e/fields/LogError__c.field-meta.xml
<CustomField>
    <fullName>LogError__c</fullName>
    <label>LogError</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>