MyOrg2022/force-app/main/default/objects/Exception__e/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <label>object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>